--- a/wechatStyle.css
+++ b/wechatStyle.css
@@ -5,17 +5,11 @@ body{
     width: 200px;
 }
 
-.impowerBox .title {
-    display: none;
-}
-
 .impowerBox .info {
     width: 200px;
+    color:#ccc
 }
 
-.status_icon {
-    display: none
-}
 
 .impowerBox .status {
     text-align: center;
