--- a/wechatStyle.css
+++ b/wechatStyle.css
@@ -8,5 +8,5 @@ body{
 .impowerBox .info {
     color:#ccc
 }
-.status_icon {display:none}
+.impowerBox .status_icon{display:none}
 .impowerBox .status {text-align:center;}
